# vitality-keeper

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  build-linux.sh  dev.bat  package-lock.json  package.json
.github/workflows/: macos-release.yml
docs/: architecture.en.md  architecture.zh-CN.md  macos-release-workflow.md  product-audit.zh-CN.md  release-notes-v0.1.6.md  release-notes-v0.1.7.md  release-notes-v0.1.8.md  release-notes-v0.1.9.md  release-notes-v0.2.1.md  release-notes-v0.2.2.md  release-notes-v0.2.3.md  updater-release.en.md  updater-release.zh-CN.md
scripts/: generate-latest-json.mjs
src/: app-config.js  break.html  dashboard.html  i18n.js  icon-fallback.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: nsis-hooks.nsh
